# digital-astrology

./: .eslintrc.json  .gitignore  .pnp.cjs  README.md  package.json  turbo.json  vercel.json
.github/workflows/: ci.yml  codeql.yml  deploy.yml  pr-checks.yml
apps/admin/: package.json  tsconfig.json
apps/admin/app/: globals.css  layout.tsx
apps/web/: middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(marketing)/: page.tsx
apps/web/app/astrology-test/: page.tsx
apps/web/app/consultations/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/my-kundlis/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/shop/: page.tsx
apps/web/components/astrology/: birth-chart-generator-v2.tsx  birth-chart-generator.tsx
apps/web/components/consultation/: directory.tsx
apps/web/components/horoscope/: daily-grid.tsx  (+1 more)
apps/web/hooks/: use-supabase-auth.test.ts
apps/web/test/: setup.ts
docs/api/: README.md
docs/architecture/: frontend-ui.md  overview.md
scripts/automation/: README.md
scripts/seed/: README.md
services/astro-core/: tsconfig.json
services/astro-core-python/: README.md  pyproject.toml
services/astro-core-python/freeastrology/: client.py  config.py  main.py  models.py  translator.py
services/astro-core/src/: app.module.ts
services/consultations/: tsconfig.json
services/consultations/src/: index.ts
services/notifications/: package.json
services/notifications/src/: index.ts
(+53 files in other folders)
