[project]
name = "astro-core-python"
version = "0.1.0"
description = "FastAPI proxy for FreeAstrologyAPI with Jyotishya normalized responses"
authors = [{ name = "Jyotishya" }]
readme = "README.md"
dependencies = [
  "fastapi>=0.111.0,<1",
  "uvicorn[standard]>=0.30.0,<1",
  "httpx>=0.27.0,<1",
  "pydantic-settings>=2.4.0,<3"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=7.4.0,<8", "respx>=0.20.0,<1"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["freeastrology"]
